--- a/packages/ag-charts-community/src/dom/container.css
+++ b/packages/ag-charts-community/src/dom/container.css
@@ -3,6 +3,13 @@
     user-select: none;
 }
 
+.ag-charts-tab-guard {
+    width: 0%;
+    height: 0%;
+    position: absolute;
+    pointer-events: none;
+}
+
 .ag-charts-canvas-center {
     width: 100%;
     height: 100%;
