--- a/packages/ag-charts-community/src/dom/proxyInteractionStyles.css
+++ b/packages/ag-charts-community/src/dom/proxyInteractionStyles.css
@@ -10,7 +10,7 @@
     border: none;
     color: rgba(0, 0, 0, 0);
     overflow: hidden;
-    pointer-events: none;
+    pointer-events: auto;
     position: absolute;
 }
 
