--- a/packages/ag-charts-enterprise/src/styles.css
+++ b/packages/ag-charts-enterprise/src/styles.css
@@ -8,3 +8,4 @@
 @import url(./features/context-menu/contextMenuStyles.css);
 @import url(./features/crosshair/crosshairLabel.css);
 @import url(./features/text-input/textInputStyles.css);
+@import url(./features/ranges/ranges.css);
