--- a/packages/ag-charts-enterprise/src/styles.css
+++ b/packages/ag-charts-enterprise/src/styles.css
@@ -9,3 +9,4 @@
 @import url(./features/crosshair/crosshairLabel.css);
 @import url(./features/text-input/textInputStyles.css);
 @import url(./features/ranges/ranges.css);
+@import url(./features/zoom/zoom.css);
