--- a/packages/ag-charts-enterprise/src/features/ranges/ranges.css
+++ b/packages/ag-charts-enterprise/src/features/ranges/ranges.css
@@ -1,4 +1,5 @@
-.ag-charts-toolbar--ranges {
+.ag-charts-range-buttons {
+    /* TODO: move these out once toolbar.css is cleaned up */
     .ag-charts-toolbar__button--first {
         border-bottom-left-radius: var(--ag-charts-button-radius);
         border-top-left-radius: var(--ag-charts-button-radius);
