--- a/packages/ag-charts-website/src/components/license-setup/LicenseSetup.astro
+++ b/packages/ag-charts-website/src/components/license-setup/LicenseSetup.astro
@@ -1,11 +1,9 @@
 ---
-import { LicenseSetup } from '@ag-website-shared/components/license-setup/components/LicenseSetup';
-import { getEntry } from 'astro:content';
+import { LicenseSetup } from '@components/license-setup/components/LicenseSetup';
 import { getFrameworkFromPath } from '@components/docs/utils/urlPaths';
-import seedRepos from '@ag-website-shared/content/seed-projects/grid-seed-projects.json';
 
 const { pathname } = Astro.url;
 const framework = getFrameworkFromPath(pathname);
 ---
 
-<LicenseSetup client:only="react" library="charts" framework={framework} path={pathname} seedRepos={seedRepos} />
+<LicenseSetup client:only="react" library="charts" framework={framework} path={pathname} />
