AG-13404 - Fix gallery enterprise icon colour, refactor icon colours (#2978)

--- a/packages/ag-charts-website/src/components/homepage/components/HomepageGalleryExamples.module.scss
+++ b/packages/ag-charts-website/src/components/homepage/components/HomepageGalleryExamples.module.scss
@@ -66,10 +66,10 @@
 
 .tabButtonIcon,
 .activeTabButtonIcon {
-    --icon-size: #{$spacing-size-6} !important;
+    --icon-size: #{$spacing-size-6};
+    --icon-color: var(--color-text-primary);
 
-    fill: var(--color-text-primary) !important;
-    margin-right: $spacing-size-2 !important;
+    margin-right: $spacing-size-2;
 }
 
 .activeTabButton {
