--- a/packages/ag-charts-website/src/pages/gallery/[pageName].astro
+++ b/packages/ag-charts-website/src/pages/gallery/[pageName].astro
@@ -90,8 +90,7 @@ const metaDescription = `Example of a ${page.title} Chart built with AG Charts J
 
     .enterpriseIcon {
         --icon-size: 28px;
-
-        fill: var(--color-enterprise-icon);
+        --icon-color: var(--color-enterprise-icon);
     }
 
     .moreExampleLabel {
