Duplicate H1 and Title Tags

--- a/packages/ag-charts-website/src/pages/changelog.astro
+++ b/packages/ag-charts-website/src/pages/changelog.astro
@@ -14,7 +14,7 @@ const { data: docsNavData } = await getEntry('docs-nav', 'docsNav');
 ---
 
 <Layout
-    title="AG Charts Changelog"
+    title="Changelog | AG Charts"
     description="Identify the specific version in which a feature request or bug fix was included. Find changelog items by issue number, summary content, or version."
     showDocsNav={true}
     showSearchBar={true}
