--- a/packages/ag-charts-website/src/pages/documentation-archive.astro
+++ b/packages/ag-charts-website/src/pages/documentation-archive.astro
@@ -20,7 +20,7 @@ const { data: docsNavData } = await getEntry('docs-nav', 'docsNav');
 ---
 
 <Layout
-    title={'Documentation Archive'}
+    title={'Documentation Archive | AG Charts'}
     description={'Browse archived documentation for previous AG Charts versions, from version 9 onwards. View changelogs for every minor and major release.'}
     showDocsNav={true}
     showSearchBar={true}
