--- a/packages/ag-charts-website/src/pages/index.astro
+++ b/packages/ag-charts-website/src/pages/index.astro
@@ -114,8 +114,8 @@ const AG_GRID_CHARTS_CDN_URL = isArchive
 <script is:inline src={AG_GRID_CHARTS_CDN_URL}></script>
 
 <Layout
-    title="JavaScript Charts | High-Performance & Feature-Rich Charting Library - AG Charts"
-    description="Create beautiful, high-performance JavaScript charts quickly with AG Charts. Free forever; upgrade to enterprise for advanced features and dedicated support."
+    title="JavaScript Charts | AG Charts"
+    description="Create beautiful, high-performance JavaScript Charts quickly with AG Charts. Free forever; upgrade to enterprise for advanced features and dedicated support."
 >
     <div class:list={[styles.container]}>
         <div class={styles.homepageHero}>
