--- a/packages/ag-charts-website/src/pages/pipeline.astro
+++ b/packages/ag-charts-website/src/pages/pipeline.astro
@@ -14,7 +14,7 @@ const { data: docsNavData } = await getEntry('docs-nav', 'docsNav');
 ---
 
 <Layout
-    title="AG Charts Pipeline"
+    title="Pipeline | AG Charts"
     description="Lists feature requests and bugs in our backlog. Find items planned for the next release or check their status. Search by release date, issue number or summary."
     showSearchBar={true}
     showDocsNav={true}
