--- a/packages/ag-charts-website/src/pages/sitemap.astro
+++ b/packages/ag-charts-website/src/pages/sitemap.astro
@@ -9,7 +9,7 @@ const parsedSitemap = parseSitemap(xmlSitemap);
 ---
 
 <Layout
-    title={'AG Charts Sitemap'}
+    title={'Sitemap | AG Charts'}
     description={'The AG Charts sitemap. Contains links to every page on the site, including docs.'}
     showDocsNav={false}
     showSearchBar={true}
