--- a/packages/ag-charts-website/src/pages/gallery.astro
+++ b/packages/ag-charts-website/src/pages/gallery.astro
@@ -16,7 +16,7 @@ const enableDprScaling = GALLERY_IMAGE_DPR_ENHANCEMENT;
 ---
 
 <Layout
-    title="AG Charts Gallery"
+    title="Gallery | AG Charts"
     description="Gallery of JavaScript Charts and JavaScript Graphs created with AG Charts. View source code and interact with Charts; live edit examples with CodeSandbox and Plunker."
     showSearchBar={true}
 >
